Added vfork example which uses shared resources.

--- a/src/030_Process_management/makefile
+++ b/src/030_Process_management/makefile
@@ -7,9 +7,11 @@ CFLAGS=-std=c89 -Wpedantic -Wall -O2
 	
 forking: forking.o
 	$(CC) -o $@ $^ $(CFLAGS)
-	
+
+vforking: vforking.o
+	$(CC) -o $@ $^ $(CFLAGS)	
 
 .PHONY: clean
 
 clean:
-	rm -f *.o forking
+	rm -f *.o forking vforking
